--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-server.port=24682
+server.port=34624
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #하이버네이트가 실행하는 모든 SQL문을 콘솔로 출력해 준다.
