--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=i4db
 spring.datasource.password=I4data.0419
 spring.jpa.show-sql=true
-server.port=34624
-
+#server.port=34624
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #하이버네이트가 실행하는 모든 SQL문을 콘솔로 출력해 준다.
 spring.jpa.properties.hibernate.show_sql=true
