--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // Use JUnit Jupiter for testing.
-//    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
     // This dependency is used by the application.
     // implementation 'com.google.guava:guava:30.1.1-jre'
