--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,13 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    //querydsl 추가 
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    // querydsl 추가 완료
+
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
@@ -48,6 +55,7 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+
 tasks.named('asciidoctor') {
     inputs.dir snippetsDir
     dependsOn test
@@ -57,3 +65,11 @@ tasks.named('asciidoctor') {
 //     // Use JUnit Platform for unit tests.
 //     useJUnitPlatform()
 // }
+
+// QueryDsl 빌드 옵션 (선택)
+clean {
+    delete file('src/main/generated')
+}
+
+
+
