--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,9 @@ spring.jpa.properties.hibernate.format_sql=true
 #디버깅이 용이하도록 SQL문 이외에 추가적인 정보를 출력해 준다.
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
