23-05-15 동적쿼리 테스트 -querydsl 날짜 , 시간 검색 성공

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     //querydsl 추가 
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     // querydsl 추가 완료
@@ -68,8 +68,10 @@ tasks.named('asciidoctor') {
 
 // QueryDsl 빌드 옵션 (선택)
 
+def generatedDir = 'src/main/generated'
+
 clean {
-    delete file('src/main/generated')
+    delete file(generatedDir)
 }
 
 
