--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.mail.password=sniheutmbcdsjtvf
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
+## UTF 8 
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.mime.charset=UTF-8
